--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <title>React App</title>
+    <title>ToDoReact</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
